--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "ts-lint": "tsc — noEmit — incremental — watch"
+    "lint": "next lint"
   },
   "dependencies": {
     "@next/font": "13.1.4",
